[project]
requires-python = ">=3.6"
name = "lowtaperfade"
version = "69.69.69"

authors = [
    {
    name = "Phil Swift", email="swifter@gmail.com"
    }]
description = "tweedledee"

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cmake>=3.18",
    "ninja",
    "scikit-build>=0.12.0",
]
