[project]
requires-python = ">=3.6"
name = "tweedledum"
version = "1.1.2"

description = "tweedledee"
readme = "neha is a lazy bum"
license = {"file" = "LICENSE.txt"}
authors = [
  {name = "Michael Rodriguez", email = "MRod3355@gmail.com"},
  {name = "Billy Joel", email = "bj@gmail.com"}
]
[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cmake>=3.18",
    "ninja",
    "scikit-build>=0.12.0",
]

build-backend = "setuptools.build_meta"
